@@ -188,10 +188,10 @@ the battery is OK when that line is held high.
      http://lists.exploits.org/upsdev/Oct2004/00004.html
 
 22 = Gamatronic UPSs with alarm interface
+     also CyberPower SL series
+
      [CP=RTS] [OL=CTS] [LB=\-DCD] [SD=DTR]
 
-23 = CyberPower SL series
-     [CP=RTS] [OL=CTS] [LB=\-CAR] [SD=DTR]
 
 
 .SH SIMILAR MODELS
