@@ -1,3 +1,7 @@
+Wed Jul 12 10:47:43 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>
+
+ - genericups: merge type 23 in type 22
+
 Mon Jul 10 20:33:13 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>
 
  - mge-shut: fix the duplicate test.battery.start
